<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rajče Uploader</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_img_gallery">ImgGalleryActivity</string>
    <string name="title_activity_recent_gallery">RecentGallery</string>
    <string name="action_next">Dále</string>
    <string name="action_down">Výběr</string>
    <!-- \u00A0 je nedelitelna mezera (pro dostatek mista pred sipkou zpet) -->
    <string name="title_activity_old_new_dialog">\u00A0Vybrat album</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_album">\u00A0Nové album</string>
    <string name="album_name">Název alba</string>
    <string name="hint_descript">Popis alba</string>
    <string name="action_submit">Nahrát</string>
    <string name="is_hidden">Skrýt album</string>
    <string name="pass_protected">Album s heslem</string>
    <string name="album_login">Jméno</string>
    <string name="album_pass">Heslo</string>
    <string name="go_back_home">Vrátit se do výběru fotek</string>

    <string-array name="oldnew">
        <item>Vytvořit nové album</item>
        <item>Přidat do stávajícího</item>
    </string-array>

    <string name="title_activity_current_album">\u00A0Nahrávání do alba</string>

</resources>
